--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ repositories {
 }
 
 dependencies {
+    // gson
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    
     //dbcp
     compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
 
@@ -29,6 +32,7 @@ dependencies {
 
     // test framework
     compile "org.codehaus.groovy:groovy-all:2.4.15"
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
     testCompile "org.spockframework:spock-core:1.2-groovy-2.4"
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile group: 'junit', name: 'junit', version: '4.12'
