--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ repositories {
 }
 
 dependencies {
+    // servlet
+    implementation group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+
     // gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     
